--- a/src/RushRoyale.WebUI/wwwroot/index.html
+++ b/src/RushRoyale.WebUI/wwwroot/index.html
@@ -13,7 +13,12 @@
 </head>
 
 <body>
-    <div id="app">Loading RushRoyale.xyz ...</div>
+    <div id="app">
+        <div id="loading-wrapper">
+            <div id="loading-text">LOADING</div>
+            <div id="loading-content"></div>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
